# sentiment-classification

./: README.md  main.py  pyproject.toml  requirements.txt
data/: processing.py
data/cleaned/: cleaned_reviews.csv
data/raw/: clothing_reviews.csv  guitar_bag.csv  headphones.csv  negative_phone.csv  phone_reviews.csv  shoes.csv
models/: sentiment_model.pkl  tfidf_vectorizer.pkl  train.py
scraper/: scraper.py
